# Warehouse_Manipulator

./: README.md
code/: fk.py  ik.py
kuka_moveit_pkg/: .setup_assistant  CMakeLists.txt  package.xml
kuka_moveit_pkg/config/: fake_controllers.yaml  joint_limits.yaml  kuka_prism.srdf  ompl_planning.yaml  ros_controllers.yaml  stomp_planning.yaml
kuka_moveit_pkg/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  kuka_moveit.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
kuka_prism/: CMakeLists.txt  package.xml
kuka_prism/config/: joint_names_kuka_prism.yaml  joint_trajectory_controller.yaml
kuka_prism/launch/: arm_urdf.launch  display.launch  empty_world.launch  gazebo.launch  kuka_x.launch  rqt_image.launch
kuka_prism/meshes/: Base_Rotary_Link.STL  Grip1_Link.STL  Grip2_Link.STL  Lower_Upper_Link.STL  P2_Wrist_Link.STL  Rotary_Lower_Link.STL  Upper_P2_Link.STL  base_link.STL
kuka_prism/scripts/: plan.py
kuka_prism/urdf/: kuka_cam.urdf.xacro  kuka_prism.csv  kuka_prism.urdf
kuka_prism/world/: aws_warehouse.world
